# TurboNeRF

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md  TODO.md  boop
.github/: FUNDING.yml
.github/workflows/: build-release.yml
LICENSES/: Dav1dde_glad.md  NVLabs_tiny-cuda-nn.md  cheind_pure-torch-ngp.md  glfw_glfw.md  knotman90_cuStreamComp.md  prman-pixar_RenderManForBlender.md
etc/: pre-release.md  py310.yml
examples/: render1.py  train-all.py  train.py
includes/: CMakeLists.txt
includes/glad/: CMakeLists.txt
includes/glad/include/glad/: gl.h  glad.h
includes/glad/src/: gl.c  glad.c
patches/: glad-pic.patch  pybind11-cuda12.patch  tiny-cuda-nn-pic.patch
scripts/: rc2nerf.py
scripts/actions/: install_cuda_windows.ps1
src/: CMakeLists.txt  common.h  main.cu  main.h
src/api/: pybind_cpp_utils.cuh  pybind_cuda.cuh  python_bindings.cpp  python_bindings.cu
src/controllers/: nerf-rendering-controller.cu  nerf-rendering-controller.h  nerf-training-controller.cu  nerf-training-controller.h
src/core/: adam-optimizer.cuh  embedding.cuh  lion-optimizer.cuh  nerf-network.cu  nerf-network.cuh  occupancy-grid.cuh  renderer.cu  renderer.cuh  trainer.cu  trainer.cuh
src/effects/: spatial-effect.cuh
src/effects/spatial/: repeater.cu  repeater.cuh
src/integrations/: blender.cuh
src/json-bindings/: CMakeLists.txt  eigen-json.hpp
src/math/: geometric-intersections.cuh  hexagon-grid.cuh  matrix4f.cuh  transform4f.cuh  tuple-math.cuh
src/models/: bounding-box.cu  bounding-box.cuh  bounding-box.h  camera.cpp  camera.cu  camera.cuh  camera.h  camera.hpp  cascaded-occupancy-grid-workspace.cuh  cascaded-occupancy-grid.cuh  dataset.cpp  dataset.cu  dataset.h  dataset.hpp  nerf-network-params-workspace.cuh  nerf-network-workspace.cuh  nerf-network.cu  nerf-network.h  nerf-proxy.cuh  nerf-renderable.cuh  nerf.cu  nerf.cuh  ray-batch.cuh  ray-marcher.h  ray.h  ray.hpp  rays.h  render-buffer.cu  render-buffer.cuh  render-modifiers.cuh  render-pattern.cuh  render-request.cuh  render-task.cuh  rendering-workspace.cu  rendering-workspace.cuh  rendering-workspace.h  training-image.cpp  training-image.cu  training-image.cuh  training-image.h  (+7 more)
src/models/json-bindings/: eigen-json.h
src/render-targets/: cpu-render-buffer.cuh  cuda-render-buffer.cuh  opengl-render-surface.cuh  render-target.cuh
src/rendering/ray-batch-coordinators/: hexagonal-grid-ray-batch-coordinator.cu  hexagonal-grid-ray-batch-coordinator.cuh  hexagonal-tile-ray-batch-coordinator.cu  hexagonal-tile-ray-batch-coordinator.cuh  linear-buffer-ray-batch-coordinator.cu  linear-buffer-ray-batch-coordinator.cuh  ray-batch-coordinator.cuh  rectangular-grid-ray-batch-coordinator.cu  rectangular-grid-ray-batch-coordinator.cuh
src/rendering/render-task-factories/: hexagonal-grid-render-task-factory.cuh  linear-chunk-render-task-factory.cuh  rectangular-grid-render-task-factory.cuh  render-task-factory.cu  render-task-factory.cuh
src/services/: device-manager.cuh  file-manager.cuh  nerf-manager.cuh  runtime-manager.cuh  trainer.cuh  workspace-manager.cuh
src/utils/: alphatensor_mmul4x4.cuh  bit-utils.cu  bit-utils.cuh  camera-kernels.cu  camera-kernels.cuh  color-utils.cuh  common-network-kernels.cu  common-network-kernels.cuh  coordinate-transformations.cuh  cu-compactor.cu  cu-compactor.cuh  cuCompactor.cu  cuCompactor.cuh  device-math.cuh  embedder.cu  gpu-image.cu  gpu-image.cuh  gpu_image.cu  gpu_image.h  hexagon-grid.cuh  linalg.cuh  nerf-constants.cuh  observable.cuh  occupancy-grid-kernels.cu  occupancy-grid-kernels.cuh  parallel-utils.cuh  queues.h  raymarching-utils.cuh  render-flags.cuh  rendering-kernels.cu  rendering-kernels.cuh  stream-compaction.cu  stream-compaction.cuh  training-batch-kernels.cuh  training-kernels-fused.cuh  training-network-kernels.cuh  tuple-math.cuh  volumetric-rendering.cuh
src/utils/json-bindings/: eigen-json.h
src/utils/linalg/: transform4f.cuh
src/workspaces/: dataset-workspace.cuh  distributed-workspace.cuh  nerf-workspace-group.cuh  network-params-workspace.cuh  network-workspace.cuh  occupancy-grid-workspace.cuh  rendering-workspace.cuh  scene-workspace.cuh  training-workspace.cuh  workspace-ref.cuh  workspace.cuh
